packages/next-swc/crates/core/tests/errors/server-actions/server-graph/11/output.js
import 'react';
'use sevrer' // ^Tools like Prettier sometimes do this.
;
